OCEPROJECT-XXXX no ticket: fixing a small display bug with the carousel dots. they didn't need the border as it was hidden by a pseudo element. in some cases this may not line up properly and looked like a bug

--- a/CancerGov/_src/StyleSheets/_slick.scss
+++ b/CancerGov/_src/StyleSheets/_slick.scss
@@ -180,7 +180,7 @@
             border-left-color: $teal;
             border-bottom-color: $teal;
             border-right-color: $teal;
-            border-width: 3px;
+            border-width: 0px;
             outline: none;
             line-height: 0;
             font-size: 0;
